--- a/index.html
+++ b/index.html
@@ -4,10 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nombre provisorio</title>
+    <title>Mi pagina web</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+</head>
 </head>
 <body>
-    <h1>Hello world!</h1>
-    <h2>Cambios repentinos</h2>
+	<header>
+		<h1>#YoProgramo</h1>
+		<img src="arg-programa.png" alt="Logo de argentina programa"> <!--Para la parte izquierda se pide el logo y nombre del programa y un banner personal -->
+		<img src="webmaker.png" alt="Mi banner">
+		<nav><!--Para la parte derecha pide mis redes sociales y un boton para el login-->
+			<ul>
+				<li><a href="https://www.instagram.com/valentin_tordi/" target="_blank">Mi instagram</a></li> 
+				<li><a href="login.html">Loguearse</a></li>
+			</ul>
+		</nav>
+	</header>
+    <h3>Sobre mi</h3>
+	<img src="mi foto.jpg" alt="Foto mia" id="miFoto"  width="200px">
+	<p>Me llamo Valentin Tordi y soy Full Stack Developer Jr. Tambien cuento con un nivel de ingles medio</p>
+
+	<h3>Experiencia</h3>
+	<p>Actualmente no cuento con mucha experiencia laboral en este campo. Pero he trabajado como ayudante en la <a href="https://www.actc.org.ar/tc/index.html" target="_blank"> Asociación Corredores Turismo Carretera</a> durante dos semanas y me di cuenta de que me adapto a todo tipo de trabajo.</p>
+	<p>En este trabajo temporal he aprendido a tratar con gente en un ambito laboral y arreglarmelas por mi cuenta para resolver distintos problemas.</p>
+	<p>//poner logo del actc</p>
+	<h3>Educacion</h3>
+	<p>Realice ambos cursos de argentina programa #YoProgramo y #SeProgramar y un curso de desarrollo web dictado por <a href="https://junior.org.ar/" target="_blank">Junior Achievement Argentina</a>. </p>
+	<p>//Tengo que detallar mas que hize en cada parte y ver si puedo poner logos</p>
+	<p>Realice un curso de armado y reparacion de computadoras dictado en la localidad de Viedma. En el mismo pude aprender los componentes que contiene una computadora, el funcionamiento de cada uno, como limpiar los mismos e instalar sistemas operativos.</p>
+	<p>Estoy en el segundo año de la carrera de lincenciatura en sistemas de la <a href="https://unrn.edu.ar/home" target="_blank">universidad nacional de Rio Negro</a></p>
+	<p>Actualmente estoy estudiando idiomas y cuento con un nivel intermendio de ingles y un nivel basico/principiante del idioma japones.</p>
 </body>
 </html>
