Fin del maquetado de prueba

--- a/index.html
+++ b/index.html
@@ -31,19 +31,33 @@
 		</header>
 		<div class="col"><img src="webmaker.png" class="img-fluid" alt="Mi banner" width="100%"></div>
 	</div>
-    <h3>Sobre mi</h3>
-	<img src="mi foto.jpg" alt="Foto mia" id="miFoto"  width="200px">
-	<p>Me llamo Valentin Tordi y soy Full Stack Developer Jr. Tambien cuento con un nivel de ingles medio</p>
 
-	<h3>Experiencia</h3>
-	<p>Actualmente no cuento con mucha experiencia laboral en este campo. Pero he trabajado como ayudante en la <a href="https://www.actc.org.ar/tc/index.html" target="_blank"> Asociación Corredores Turismo Carretera</a> durante dos semanas y me di cuenta de que me adapto a todo tipo de trabajo.</p>
-	<p>En este trabajo temporal he aprendido a tratar con gente en un ambito laboral y arreglarmelas por mi cuenta para resolver distintos problemas.</p>
-	<p>//poner logo del actc</p>
-	<h3>Educacion</h3>
-	<p>Realice ambos cursos de argentina programa #YoProgramo y #SeProgramar y un curso de desarrollo web dictado por <a href="https://junior.org.ar/" target="_blank">Junior Achievement Argentina</a>. </p>
-	<p>//Tengo que detallar mas que hize en cada parte y ver si puedo poner logos</p>
-	<p>Realice un curso de armado y reparacion de computadoras dictado en la localidad de Viedma. En el mismo pude aprender los componentes que contiene una computadora, el funcionamiento de cada uno, como limpiar los mismos e instalar sistemas operativos.</p>
-	<p>Estoy en el segundo año de la carrera de lincenciatura en sistemas de la <a href="https://unrn.edu.ar/home" target="_blank">universidad nacional de Rio Negro</a></p>
-	<p>Actualmente estoy estudiando idiomas y cuento con un nivel intermendio de ingles y un nivel basico/principiante del idioma japones.</p>
+    <div class="container">
+		<h3>Sobre mi</h3>
+		<img src="mi foto.jpg" alt="Foto mia" id="miFoto"  width="200px">
+		<p>Me llamo Valentin Tordi y soy Full Stack Developer Jr. Tambien cuento con un nivel de ingles medio</p>
+	</div>
+	<div class="container">
+		<h3>Experiencia</h3>
+		<p>Actualmente no cuento con mucha experiencia laboral en este campo. Pero he trabajado como ayudante en la <a href="https://www.actc.org.ar/tc/index.html" target="_blank"> Asociación Corredores Turismo Carretera</a> durante dos semanas y me di cuenta de que me adapto a todo tipo de trabajo.</p>
+		<p>En este trabajo temporal he aprendido a tratar con gente en un ambito laboral y arreglarmelas por mi cuenta para resolver distintos problemas.</p>
+		<p>//poner logo del actc</p>
+	</div>
+		<div class="container">
+		<h3>Educacion</h3>
+		<p>Realice ambos cursos de argentina programa #YoProgramo y #SeProgramar y un curso de desarrollo web dictado por <a href="https://junior.org.ar/" target="_blank">Junior Achievement Argentina</a>. </p>
+		<p>//Tengo que detallar mas que hize en cada parte y ver si puedo poner logos</p>
+		<p>Realice un curso de armado y reparacion de computadoras dictado en la localidad de Viedma. En el mismo pude aprender los componentes que contiene una computadora, el funcionamiento de cada uno, como limpiar los mismos e instalar sistemas operativos.</p>
+		<p>Estoy en el segundo año de la carrera de lincenciatura en sistemas de la <a href="https://unrn.edu.ar/home" target="_blank">universidad nacional de Rio Negro</a></p>
+		<p>Actualmente estoy estudiando idiomas y cuento con un nivel intermendio de ingles y un nivel basico/principiante del idioma japones.</p>
+	</div>
+	<div class="container">
+		<h3>Hard & soft skills</h3>
+		<p>Actualmente no tengo nada, solo escribo como maquetado</p>
+	</div>
+	<div class="container">
+		<h3>Proyectos</h3>
+		<p>Actualmente no tengo nada, solo escribo como maquetado</p>
+	</div>
 </body>
 </html>
